
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/regbg"
    android:id="@+id/loginFragment">


    <ImageView
        android:layout_width="312dp"
        android:layout_height="137dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="110dp"
        android:paddingRight="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/cart" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_text_field"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#030607"
        android:textColorHint="#4D574ACD"
        android:textSize="18sp"
        android:hint="Email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_text_field"
        android:drawableLeft="@drawable/icon_pass"
        android:drawablePadding="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#030607"
        android:textColorHint="#4D574ACD"
        android:textSize="18sp"
        android:hint="Password"
        android:inputType="textPassword" />



    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_text_field"
        android:drawablePadding="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="Login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNoAccount"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="7dp"
        android:text="Don't have an account?"
        android:textSize="20dp"
        android:textColor="@color/purple"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCreateAccount"
        android:layout_marginBottom="20dp"
        android:text="Register Now!"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/purple"
        android:textAlignment="center"/>

</LinearLayout>

