<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <group android:checkableBehavior="single">-->



        <item android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="Home" />

        <item android:id="@+id/cmp"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="Registration" />

        <item android:id="@+id/login"
            android:icon="@drawable/baseline_login_24"
            android:title="Login" />

        <item android:id="@+id/pdf"
            android:icon="@drawable/baseline_local_fire_department_24"
            android:title="Trend" />





        <!--    </group>-->


                <item android:id="@+id/pro"
                    android:icon="@drawable/baseline_account_circle_24"
                    android:title="Profile" />

                <item android:id="@+id/exit"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="Exit"
                    />
<!--            </group>-->


</menu>