<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.profile.ProfileFragment"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
      >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAccount"
            android:layout_marginBottom="20dp"
            android:text="Seller/Buyer's Account"
             android:textSize="20dp"
             android:textColor="@color/purple"
            android:textStyle="bold"
            android:textAlignment="center"/>


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="#4D574ACD"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:textColor="#030607"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_text_field"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="Edit Username"/>




            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_text_field"
                android:drawablePadding="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#030607"
                android:textColorHint="#4D574ACD"
                android:textSize="18sp"
                android:hint="Edit Email"
                android:inputType="textEmailAddress"/>


            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_text_field"
                android:drawablePadding="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#030607"
                android:textColorHint="#4D574ACD"
                android:textSize="18sp"
                android:hint="Phone"
                android:inputType="number"/>


            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_text_field"
                android:drawableLeft="@drawable/icon_address"
                android:drawablePadding="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#030607"
                android:textColorHint="#4D574ACD"
                android:textSize="18sp"
                android:hint="Address"
                android:inputType="textMultiLine"/>


        <!-- Add similar TextInputLayouts for email, password, address, and phone -->

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:text="Update" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewProducts"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="Product Details"
            android:textSize="20dp"
            android:textColor="@color/purple"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/buttonAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:text="Add New Product" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:text="Logout" />

    </LinearLayout>

</ScrollView>
